# colophon

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-publish.yml
docker/: entrypoint.sh
src/colophon/: __main__.py  app_context.py  controller.py
tests/: conftest.py  test_album_title_routing.py  test_app_context.py  test_book_search.py  test_classify.py  test_combine.py  test_controller.py  test_controller_acquire_mode.py  test_controller_attention.py  test_controller_cleanup.py  test_controller_download_queue.py  test_controller_download_status.py  test_controller_franchise.py  test_controller_organize_preview.py  test_controller_phases.py  test_controller_rd_cache.py  test_controller_reanchor.py  test_controller_reassign.py  test_controller_scan_options.py  test_dialogs_delete.py  test_filename_cluster.py  test_filename_cluster_corpus.py  test_focus.py  test_foster_work.py  test_graph_explore_ui.py  test_graph_inspect_service.py  test_graph_store_integration.py  test_ingest_classification.py  test_ingest_phases.py  test_ingest_reassociate.py  test_ingest_untagged_fill.py  test_main_logging.py  test_matching.py  test_models_classification.py  test_navigator.py  test_phase_model.py  test_phases.py  test_phases_derive.py  test_phases_migrate.py  test_reassign.py  (+17 more)
tests/adapters/: test_audio.py  test_audio_ext.py  test_audiobookshelf.py  test_config.py  test_cover.py  test_downloader.py  test_ffmpeg.py  test_graph_store.py  test_history_store.py  test_http.py  test_lazylibrarian.py  test_lazylibrarian_api.py  test_rd_cache_repo.py  test_realdebrid.py  test_realdebrid_cache.py  test_realdebrid_retry.py  test_scan.py  test_sidecar.py  test_store.py  test_store_reassign.py  test_tags.py
tests/core/: test_attention.py  test_audio_quality.py  test_cancel.py  test_catalog.py  test_chapters.py  test_coerce.py  test_confidence.py  test_dirinfer.py  test_duplicate_check.py  test_entity_alias.py  test_entity_graph.py  test_errors.py  test_fields.py  test_filename_cluster.py  test_filename_parser.py  test_folder_title.py  test_franchise_seeds.py  test_genre_policy.py  test_graph.py  test_graph_classify.py  test_graph_explore.py  test_graph_inspect.py  test_graph_records.py  test_graph_records_franchise.py  test_graph_resolve.py  test_graph_view.py  test_guidance.py  test_identity_confidence.py  test_isbn.py  test_jobs.py  test_library_graph.py  test_match.py  test_models.py  test_navigator.py  test_node_classify.py  test_normalize.py  test_part_order.py  test_pathscheme.py  test_people.py  test_perf.py  (+17 more)
tests/ui/: test_theme.py  (+6 more)
(+156 files in other folders)
