[project]
name = "colophon"
version = "0.1.0"
description = "Self-hosted audiobook metadata and organization tool"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "LoneOutpost" }]
dependencies = [
    "pydantic>=2.7",
    "platformdirs>=4.2",
    "tomli-w>=1.0",
    "mutagen>=1.47",
    "httpx>=0.27",
    "tenacity>=8.5",
    "nicegui>=2.0",
    "pillow>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colophon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]
