[project]
name = "colophon"
version = "0.1.0"
description = "Self-hosted audiobook metadata and organization tool"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Alexi Leontopoulos", email = "alexi@alexi.org" }]
keywords = ["audiobook", "metadata", "m4b", "self-hosted", "audiobookshelf", "lazylibrarian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "pydantic>=2.7",
    "platformdirs>=4.2",
    "tomli-w>=1.0",
    "mutagen>=1.47",
    "httpx>=0.27",
    "tenacity>=8.5",
    "nicegui>=2.0",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/LoneOutpost/colophon"
Repository = "https://github.com/LoneOutpost/colophon"
Issues = "https://github.com/LoneOutpost/colophon/issues"
Changelog = "https://github.com/LoneOutpost/colophon/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colophon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]
